# Space-simulation

./: CMakeLists.txt  README.md  main.cpp
include/: celestialBody.h  shader.h  solar_system.h
src/: celestialBody.cpp  main.cpp  shader.cpp  solar_system.cpp
